# crawlers

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/app/: settings.py
app/crawlers/: admin.py
app/crawlers/migrations/: 0001_initial.py  0002_auto_20190908_1204.py
app/crawlers/models/: __init__.py  movies.py
app/crawlers/spiders/: movies.py
