[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = "Some spiders I developed."
authors = ["Jezeniel Zapanta <jezeniel.zapanta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.8.0"
requests = "^2.22.0"
lxml = "^4.9.1"
django = "^2.2.5"
django-extensions = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
